--- a/src/main/resources/assets/regions_unexplored/lang/zh_cn.json
+++ b/src/main/resources/assets/regions_unexplored/lang/zh_cn.json
@@ -77,14 +77,6 @@
   "biome.regions_unexplored.overgrown_caves": "繁杂洞穴",
   "block.regions_unexplored.cave_hyssop": "洞穴牛膝草",
   "block.regions_unexplored.prismoss_sprout": "彩虹苔芽",
-  "block.regions_unexplored.birch_branch": "白桦树枝",
-  "block.regions_unexplored.blackwood_branch": "黑檀树枝",
-  "block.regions_unexplored.cypress_branch": "柏树枝",
-  "block.regions_unexplored.dead_branch": "枯死的树枝",
-  "block.regions_unexplored.oak_branch": "橡树枝",
-  "block.regions_unexplored.pine_branch": "松树枝",
-  "block.regions_unexplored.redwood_branch": "红杉树枝",
-  "block.regions_unexplored.spruce_branch": "云杉树枝",
   "block.regions_unexplored.cypress_knee": "柏树膝",
   "block.regions_unexplored.prismarite_cluster": "彩虹水晶簇",
   "block.regions_unexplored.prismoss": "彩虹苔藓",
@@ -166,7 +158,6 @@
   "block.regions_unexplored.dead_stairs": "亡灵木楼梯",
   "block.regions_unexplored.wilting_trillium": "枯萎的延龄草",
   "block.regions_unexplored.willow_wood": "柳木",
-  "block.regions_unexplored.tall_silver_birch_sapling": "高银桦树苗",
   "block.regions_unexplored.snowy_soil": "覆雪的泥土",
   "block.regions_unexplored.maple_leaves": "绿色枫树树叶",
   "block.regions_unexplored.alpha_planks": "界初木板",
@@ -185,6 +176,7 @@
   "block.regions_unexplored.stone_bud": "生石芽",
   "block.regions_unexplored.white_painted_slab": "白色染色木台阶",
   "block.regions_unexplored.bamboo_log": "竹子原木",
+  "block.regions_unexplored.stripped_bamboo_log": "Stripped Bamboo Log",
   "block.regions_unexplored.joshua_fence_gate": "约书亚木栅栏门",
   "block.regions_unexplored.blue_crystalite": "蓝色水晶",
   "block.regions_unexplored.stripped_blackwood_wood": "去皮黑檀木",
@@ -235,7 +227,6 @@
   "block.regions_unexplored.white_cherry_sapling": "白色樱花木树苗",
   "block.regions_unexplored.mauve_door": "紫檀门",
   "block.regions_unexplored.forest_coarse_dirt": "森林砂土",
-  "block.regions_unexplored.tall_pine_sapling": "高松树树苗",
   "block.regions_unexplored.blackwood_sapling": "黑檀树苗",
   "block.regions_unexplored.red_maple_leaves": "红色枫树树叶",
   "block.regions_unexplored.pine_door": "松木门",
@@ -280,7 +271,6 @@
   "block.regions_unexplored.palm_stairs": "棕榈木楼梯",
   "block.regions_unexplored.blue_lupine": "蓝色羽扇豆",
   "block.regions_unexplored.maple_fence": "枫木栅栏",
-  "block.regions_unexplored.tall_redwood_sapling": "高红杉树苗",
   "block.regions_unexplored.blackwood_trapdoor": "黑檀木活板门",
   "block.regions_unexplored.mauve_sapling": "紫檀树苗",
   "block.regions_unexplored.larch_pressure_plate": "落叶松木压力板",
@@ -310,7 +300,6 @@
   "advancements.regions_explored.descr": "发现所有未至之地的生物群系！",
   "block.regions_unexplored.blackwood_planks": "黑檀木板",
   "block.regions_unexplored.plains_coarse_dirt": "平原砂土",
-  "block.regions_unexplored.chalk_stairs": "白垩楼梯",
   "block.regions_unexplored.dead_pine_sapling": "枯叶松树苗",
   "block.regions_unexplored.palm_log": "棕榈原木",
   "block.regions_unexplored.pine_slab": "松木台阶",
@@ -322,7 +311,6 @@
   "block.regions_unexplored.larch_leaves": "落叶松树叶",
   "block.regions_unexplored.frozen_grass": "冰草",
   "block.regions_unexplored.orange_crystalite": "橙色水晶",
-  "block.regions_unexplored.chalk_slab": "白垩台阶",
   "block.regions_unexplored.yellow_painted_slab": "黄色染色木台阶",
   "block.regions_unexplored.joshua_sapling": "约书亚树树苗",
   "block.regions_unexplored.mauve_pressure_plate": "紫檀压力板",
@@ -409,18 +397,15 @@
   "block.regions_unexplored.pine_fence_gate": "松木栅栏门",
   "death.attack.dorcel": "%s被多塞尔草卷进了地下",
   "block.regions_unexplored.magenta_painted_stairs": "品红色染色木楼梯",
-  "block.regions_unexplored.chalk": "白垩",
   "block.regions_unexplored.cattail": "香蒲",
   "block.regions_unexplored.yellow_painted_stairs": "黄色染色木楼梯",
   "block.regions_unexplored.pink_cherry_sapling": "粉色樱花树苗",
   "block.regions_unexplored.lime_painted_planks": "黄绿色染色木板",
   "block.regions_unexplored.apple_oak_leaves": "苹果树树叶",
   "block.regions_unexplored.daisy": "雏菊",
-  "block.regions_unexplored.tall_golden_larch_sapling": "高金叶落叶松树苗",
   "block.regions_unexplored.pine_log_transition": "半去皮的松木原木",
   "block.regions_unexplored.cypress_slab": "柏木台阶",
   "block.regions_unexplored.orange_maple_sapling": "橙叶枫树树苗",
-  "block.regions_unexplored.tall_spruce_sapling": "高云杉树苗",
   "block.regions_unexplored.pine_log": "松木原木",
   "advancements.regions_unexplored.title": "未至之地",
   "block.regions_unexplored.blackwood_fence": "黑檀木栅栏",
@@ -446,7 +431,6 @@
   "block.regions_unexplored.cypress_pressure_plate": "柏木压力板",
   "death.attack.dorcel.player": "%s被多塞尔草卷进了地下",
   "block.regions_unexplored.willow_planks": "柳木木板",
-  "block.regions_unexplored.tall_larch_sapling": "高落叶松树苗",
   "block.regions_unexplored.palm_slab": "棕榈木台阶",
   "block.regions_unexplored.flowering_leaves": "繁花树叶",
   "block.regions_unexplored.willow_sapling": "柳树树苗",
@@ -508,7 +492,6 @@
   "block.regions_unexplored.mycotoxic_moss": "毒菌苔藓",
   "block.regions_unexplored.mycotoxic_grass": "毒菌草",
   "block.regions_unexplored.mycotoxic_daisy": "毒菌雏菊",
-  "block.regions_unexplored.tall_yellow_bioshroom": "高黄色发光蘑菇",
   "block.regions_unexplored.hanging_prismarite": "悬垂彩虹水晶",
   "block.regions_unexplored.large_prismarite_cluster": "大型彩虹水晶簇",
   "block.regions_unexplored.prismaglass": "彩虹玻璃",
@@ -548,5 +531,117 @@
   "biome.regions_unexplored.glistering_meadow": "闪烁草地",
   "biome.regions_unexplored.corrupted_holt": "腐化之地",
   "biome.regions_unexplored.redstone_hell": "红石地狱",
-  "biome.regions_unexplored.tropics": "热带稀树森林"
+  "biome.regions_unexplored.tropics": "热带稀树森林",
+  "block.regions_unexplored.tall_acacia_sapling": "Tall Acacia Sapling",
+  "block.regions_unexplored.tall_baobab_sapling": "Tall Baobab Sapling",
+  "block.regions_unexplored.tall_birch_sapling": "Tall Birch Sapling",
+  "block.regions_unexplored.tall_blackwood_sapling": "Tall Blackwood Sapling",
+  "block.regions_unexplored.tall_cherry_sapling": "Tall Cherry Sapling",
+  "block.regions_unexplored.tall_red_cherry_sapling": "Tall Red Cherry Sapling",
+  "block.regions_unexplored.tall_pink_cherry_sapling": "Tall Pink Cherry Sapling",
+  "block.regions_unexplored.tall_white_cherry_sapling": "Tall White Cherry Sapling",
+  "block.regions_unexplored.tall_cypress_sapling": "Tall Cypress Sapling",
+  "block.regions_unexplored.tall_dark_oak_sapling": "Tall Dark Oak Sapling",
+  "block.regions_unexplored.tall_dead_sapling": "Tall Dead Sapling",
+  "block.regions_unexplored.tall_dead_pine_sapling": "Tall Dead Pine Sapling",
+  "block.regions_unexplored.tall_eucalyptus_sapling": "Tall Eucalyptus Sapling",
+  "block.regions_unexplored.tall_flowering_sapling": "Tall Flowering Sapling",
+  "block.regions_unexplored.tall_joshua_sapling": "Tall Joshua Sapling",
+  "block.regions_unexplored.tall_jungle_sapling": "Tall Jungle Sapling",
+  "block.regions_unexplored.tall_golden_larch_sapling": "高金叶落叶松树苗",
+  "block.regions_unexplored.tall_larch_sapling": "高落叶松树苗",
+  "block.regions_unexplored.tall_mangrove_sapling": "Tall Mangrove Sapling",
+  "block.regions_unexplored.tall_maple_sapling": "Tall Maple Sapling",
+  "block.regions_unexplored.tall_red_maple_sapling": "Tall Red Maple Sapling",
+  "block.regions_unexplored.tall_orange_maple_sapling": "Tall Orange Maple Sapling",
+  "block.regions_unexplored.tall_mauve_sapling": "Tall Mauve Sapling",
+  "block.regions_unexplored.tall_oak_sapling": "Tall Oak Sapling",
+  "block.regions_unexplored.tall_palm_sapling": "Tall Palm Sapling",
+  "block.regions_unexplored.tall_pine_sapling": "高松树树苗",
+  "block.regions_unexplored.tall_redwood_sapling": "高红杉树苗",
+  "block.regions_unexplored.tall_silver_birch_sapling": "高银桦树苗",
+  "block.regions_unexplored.tall_spruce_sapling": "高云杉树苗",
+  "block.regions_unexplored.tall_willow_sapling": "Tall Willow Sapling",
+  "block.regions_unexplored.acacia_branch": "Acacia Branch",
+  "block.regions_unexplored.baobab_branch": "Baobab Branch",
+  "block.regions_unexplored.birch_branch": "白桦树枝",
+  "block.regions_unexplored.blackwood_branch": "黑檀树枝",
+  "block.regions_unexplored.cherry_branch": "Cherry Branch",
+  "block.regions_unexplored.cypress_branch": "柏树枝",
+  "block.regions_unexplored.dark_oak_branch": "Dark Oak Branch",
+  "block.regions_unexplored.dead_branch": "枯死的树枝",
+  "block.regions_unexplored.eucalyptus_branch": "Eucalyptus Branch",
+  "block.regions_unexplored.joshua_beard": "Joshua Beard",
+  "block.regions_unexplored.jungle_branch": "Jungle Branch",
+  "block.regions_unexplored.larch_branch": "Larch Branch",
+  "block.regions_unexplored.mangrove_branch": "Mangrove Branch",
+  "block.regions_unexplored.maple_branch": "Maple Branch",
+  "block.regions_unexplored.mauve_branch": "Mauve Branch",
+  "block.regions_unexplored.oak_branch": "橡树枝",
+  "block.regions_unexplored.palm_beard": "Palm Beard",
+  "block.regions_unexplored.pine_branch": "松树枝",
+  "block.regions_unexplored.redwood_branch": "红杉树枝",
+  "block.regions_unexplored.spruce_branch": "云杉树枝",
+  "block.regions_unexplored.willow_branch": "Willow Branch",
+  "block.regions_unexplored.baobab_sign": "Baobab Sign",
+  "block.regions_unexplored.blackwood_sign": "Blackwood Sign",
+  "block.regions_unexplored.cherry_sign": "Cherry Sign",
+  "block.regions_unexplored.cypress_sign": "Cypress Sign",
+  "block.regions_unexplored.dead_sign": "Dead Sign",
+  "block.regions_unexplored.eucalyptus_sign": "Eucalyptus Sign",
+  "block.regions_unexplored.joshua_sign": "Joshua Sign",
+  "block.regions_unexplored.larch_sign": "Larch Sign",
+  "block.regions_unexplored.maple_sign": "Maple Sign",
+  "block.regions_unexplored.mauve_sign": "Mauve Sign",
+  "block.regions_unexplored.palm_sign": "Palm Sign",
+  "block.regions_unexplored.pine_sign": "Pine Sign",
+  "block.regions_unexplored.redwood_sign": "Redwood Sign",
+  "block.regions_unexplored.sculkwood_sign": "Sculkwood Sign",
+  "block.regions_unexplored.willow_sign": "Willow Sign",
+  "item.regions_unexplored.baobab_boat": "Baobab Boat",
+  "item.regions_unexplored.blackwood_boat": "Blackwood Boat",
+  "item.regions_unexplored.cherry_boat": "Cherry Boat",
+  "item.regions_unexplored.cypress_boat": "Cypress Boat",
+  "item.regions_unexplored.dead_boat": "Dead Boat",
+  "item.regions_unexplored.eucalyptus_boat": "Eucalyptus Boat",
+  "item.regions_unexplored.joshua_boat": "Joshua Boat",
+  "item.regions_unexplored.larch_boat": "Larch Boat",
+  "item.regions_unexplored.maple_boat": "Maple Boat",
+  "item.regions_unexplored.mauve_boat": "Mauve Boat",
+  "item.regions_unexplored.palm_boat": "Palm Boat",
+  "item.regions_unexplored.pine_boat": "Pine Boat",
+  "item.regions_unexplored.redwood_boat": "Redwood Boat",
+  "item.regions_unexplored.sculkwood_boat": "Sculkwood Boat",
+  "item.regions_unexplored.willow_boat": "Willow Boat",
+  "item.regions_unexplored.baobab_chest_boat": "Baobab Boat with Chest",
+  "item.regions_unexplored.blackwood_chest_boat": "Blackwood Boat with Chest",
+  "item.regions_unexplored.cherry_chest_boat": "Cherry Boat with Chest",
+  "item.regions_unexplored.cypress_chest_boat": "Cypress Boat with Chest",
+  "item.regions_unexplored.dead_chest_boat": "Dead Boat with Chest",
+  "item.regions_unexplored.eucalyptus_chest_boat": "Eucalyptus Boat with Chest",
+  "item.regions_unexplored.joshua_chest_boat": "Joshua Boat with Chest",
+  "item.regions_unexplored.larch_chest_boat": "Larch Boat with Chest",
+  "item.regions_unexplored.maple_chest_boat": "Maple Boat with Chest",
+  "item.regions_unexplored.mauve_chest_boat": "Mauve Boat with Chest",
+  "item.regions_unexplored.palm_chest_boat": "Palm Boat with Chest",
+  "item.regions_unexplored.pine_chest_boat": "Pine Boat with Chest",
+  "item.regions_unexplored.redwood_chest_boat": "Redwood Boat with Chest",
+  "item.regions_unexplored.sculkwood_chest_boat": "Sculkwood Boat with Chest",
+  "item.regions_unexplored.willow_chest_boat": "Willow Boat with Chest",
+  "entity.regions_unexplored.boat": "Boat",
+  "entity.regions_unexplored.chest_boat": "Boat with Chest",
+  "block.regions_unexplored.chalk_pillar": "Chalk Pillar",
+  "block.regions_unexplored.chalk": "白垩",
+  "block.regions_unexplored.chalk_slab": "白垩台阶",
+  "block.regions_unexplored.chalk_stairs": "白垩楼梯",
+  "block.regions_unexplored.chalk_bricks": "Chalk Bricks",
+  "block.regions_unexplored.chalk_brick_slab": "Chalk Brick Slab",
+  "block.regions_unexplored.chalk_brick_stairs": "Chalk Brick Stairs",
+  "block.regions_unexplored.polished_chalk": "Polished Chalk",
+  "block.regions_unexplored.polished_chalk_slab": "Polished Chalk Slab",
+  "block.regions_unexplored.polished_chalk_stairs": "Polished Chalk Stairs",
+  "block.regions_unexplored.tall_blue_bioshroom": "Tall Blue Bioshroom",
+  "block.regions_unexplored.tall_green_bioshroom": "Tall Green Bioshroom",
+  "block.regions_unexplored.tall_pink_bioshroom": "Tall Pink Bioshroom",
+  "block.regions_unexplored.tall_yellow_bioshroom": "高黄色发光蘑菇"
 }
