--- a/src/main/resources/assets/regions_unexplored/lang/en_us.json
+++ b/src/main/resources/assets/regions_unexplored/lang/en_us.json
@@ -646,5 +646,19 @@
   "block.regions_unexplored.glowing_blue_bioshroom_block": "Glowing Blue Bioshroom Block",
   "block.regions_unexplored.glowing_green_bioshroom_block": "Glowing Green Bioshroom Block",
   "block.regions_unexplored.glowing_pink_bioshroom_block": "Glowing Pink Bioshroom Block",
-  "block.regions_unexplored.glowing_yellow_bioshroom_block": "Glowing Yellow Bioshroom Block"
+  "block.regions_unexplored.red_cherry_flowers": "Red Cherry Flowers",
+  "block.regions_unexplored.pink_cherry_flowers": "Pink Cherry Flowers",
+  "block.regions_unexplored.white_cherry_flowers": "White Cherry Flowers",
+  "block.regions_unexplored.hyacinth_flowers": "Hyacinth Flowers",
+  "block.regions_unexplored.hyacinth_seagrass": "Hyacinth Seagrass",
+  "block.regions_unexplored.hyacinth_bloom": "Hyacinth Bloom",
+  "block.regions_unexplored.tall_hyacinth_stock": "Tall Hyacinth Stock",
+  "block.regions_unexplored.ashen_grass": "Ashen Grass",
+  "block.regions_unexplored.ashen_dirt": "Ashen Dirt",
+  "block.regions_unexplored.ashen_shrub": "Ashen Shrub",
+  "block.regions_unexplored.ashen_log": "Ashen Log",
+  "block.regions_unexplored.ashen_wood": "Ashen Wood",
+  "block.regions_unexplored.ashen_leaves": "Ashen Leaves",
+  "biome.regions_unexplored.hyacinth_deeps": "Hyacinth Deeps",
+  "biome.regions_unexplored.rocky_reef": "Rocky Reef"
 }
